fixed alignment of download standard out button in modals

--- a/awx/ui/static/js/shared/download-standard.out.block.less
+++ b/awx/ui/static/js/shared/download-standard.out.block.less
@@ -12,6 +12,7 @@
 
 .DownloadStandardOut--onModal {
     margin-bottom: 10px;
+    float: right;
 }
 
 .DownloadStandardOut-icon {
@@ -20,4 +21,8 @@
 
 .DownloadStandardOut-icon--withText {
     margin-right: 5px;
+}
+
+.DownloadStandardOut-pre {
+    width: 100%;
 }
